Fixed the menu content being visible when sliding from the right. Changed how the shadow is displayed.

--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -13,6 +13,7 @@ body,
   background: #f3efe0;
   padding: 10px 0 0 10px;
   margin: 0;
+  box-shadow: inset 16px 0 8px -8px #a9a5a5;
 }
 
 .content-inner {
@@ -69,7 +70,6 @@ body,
   visibility: hidden;
   width: 240px;
   height: 100%;
-  box-shadow: 8px 0 8px #a9a5a5;
   background: linear-gradient(#1d78ac, #134d6f);
   color: rgba(255, 255, 255, 0.85);
   -webkit-transition: all 0.5s;
@@ -217,10 +217,6 @@ body,
 @media (min-width: 1199px) {
   .menu-toggle {
     display: none;
-  }
-
-  .st-menu-open .st-effect-2.st-menu {
-    z-index: 100;
   }
 }
 
